scheduler: add first implementation
* Initialize scheduler
* Initialize function and add it to the list of tasks
* Run the scheduler
* Unit tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,13 +1,15 @@
 cmake_minimum_required(VERSION 3.30)
 
-# Test Harness uses C++
+# Enable c++ (required by the test harness)
 project(PowerTaskTests LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Get Test Harness
+# Get test harness
 find_package(CppUTest REQUIRED)
 
-add_executable(run_tests main.cpp)
+# Add project header files
+include_directories(${CMAKE_SOURCE_DIR}/include)
 
-target_link_libraries(run_tests PRIVATE CppUTest PowerTask)
+# Add tests
+add_subdirectory(scheduler)
