ci: add run_tests and publish coverage report

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,10 @@ add_subdirectory(tests)
 add_library(PowerTask STATIC src/scheduler.c)
 
 target_include_directories(PowerTask PUBLIC include)
+
+option(ENABLE_COVERAGE "Enable code coverage" OFF)
+
+if(ENABLE_COVERAGE)
+target_compile_options(PowerTask PRIVATE -coverage)
+target_link_libraries(PowerTask PRIVATE gcov)
+endif()
