--- a/tests/scheduler/CMakeLists.txt
+++ b/tests/scheduler/CMakeLists.txt
@@ -4,4 +4,8 @@ add_executable(test_scheduler
     src/mocks.cpp
 )
 
+if(ENABLE_COVERAGE)
+target_compile_options(test_scheduler PRIVATE -coverage)
+endif()
+
 target_link_libraries(test_scheduler CppUTest CppUTestExt PowerTask)
