ci: add energy tests to run_tests workflow

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Run tests
         run: |
           ./build/tests/scheduler/test_scheduler
+          ./build/tests/energy/test_energy
 
       - name: Install gcovr
         run: sudo apt-get install -y gcovr
